# docs/swagger.json
@@ -7,7 +7,7 @@
         "version": "1.0"
     },
     "paths": {
-        "/api/v1/image/{image_id}": {
+        "/api/v1/auth/image/{image_id}": {
             "get": {
                 "description": "get list image",
                 "tags": [
@@ -20,6 +20,13 @@
                         "description": "image id",
                         "name": "image_id",
                         "in": "path"
+                    },
+                    {
+                        "type": "string",
+                        "description": "'Bearer ' + token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -48,6 +55,13 @@
                         "in": "path"
                     },
                     {
+                        "type": "string",
+                        "description": "'Bearer ' + token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "description": "image content",
                         "name": "body",
                         "in": "body",
@@ -67,7 +81,7 @@
                 }
             }
         },
-        "/api/v1/images": {
+        "/api/v1/auth/images": {
             "get": {
                 "description": "get list image",
                 "tags": [
@@ -89,6 +103,13 @@
                     },
                     {
                         "type": "string",
+                        "description": "'Bearer ' + token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
                         "description": "status",
                         "name": "status",
                         "in": "query"
@@ -107,7 +128,7 @@
                 }
             }
         },
-        "/api/v1/object": {
+        "/api/v1/auth/object": {
             "post": {
                 "description": "upload object",
                 "tags": [
@@ -120,6 +141,13 @@
                         "description": "add block id",
                         "name": "block_id",
                         "in": "header"
+                    },
+                    {
+                        "type": "string",
+                        "description": "'Bearer ' + token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
                     },
                     {
                         "type": "file",
@@ -157,7 +185,7 @@
                 }
             }
         },
-        "/api/v1/object/{id}": {
+        "/api/v1/auth/object/{id}": {
             "get": {
                 "description": "download object",
                 "tags": [
@@ -170,6 +198,13 @@
                         "description": "object id",
                         "name": "id",
                         "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "'Bearer ' + token",
+                        "name": "Authorization",
+                        "in": "header",
                         "required": true
                     }
                 ],
