# main.go
@@ -7,6 +7,7 @@ import (
 	ginSwagger "github.com/swaggo/gin-swagger"
 	_ "github.com/swaggo/gin-swagger/example/basic/docs" // docs is generated by Swag CLI, you have to import it.
 	ImageDelivery "ocr.service.backend/app/image/delivery"
+	"ocr.service.backend/app/middleware"
 	ObjectDelivery "ocr.service.backend/app/object/delivery"
 	"ocr.service.backend/config"
 	"os"
@@ -28,13 +29,31 @@ func main() {
 		fmt.Println(err)
 		os.Exit(1)
 	}
-	router.GET("/api/v1/object/:id", objectDelivery.DownloadById)
-	router.POST("/api/v1/object", objectDelivery.Upload)
-	router.PUT("/api/v1/object", objectDelivery.Upload)
+	authMiddleware := middleware.NewAuth()
+	routerApi := router.Group("/api/v1")
+	{
+		{ //No auth
+			routerApi.GET("/object/:id", objectDelivery.DownloadById)
+			routerApi.POST("/object", objectDelivery.Upload)
+			routerApi.PUT("/object", objectDelivery.Upload)
 
-	router.GET("/api/v1/image/:image_id", imageDelivery.GetById)
-	router.POST("/api/v1/image/:image_id", imageDelivery.UpdateById)
-	router.GET("/api/v1/images", imageDelivery.Gets)
+			routerApi.GET("/image/:image_id", imageDelivery.GetById)
+			routerApi.POST("/image/:image_id", imageDelivery.UpdateById)
+			routerApi.GET("/images", imageDelivery.Gets)
+		}
+
+		routerApiAuth := routerApi.Group("/auth")
+		routerApiAuth.Use(authMiddleware.MiddlewareFunc())
+		{ // Auth
+			routerApiAuth.GET("/object/:id", objectDelivery.DownloadById)
+			routerApiAuth.POST("/object", objectDelivery.Upload)
+			routerApiAuth.PUT("/object", objectDelivery.Upload)
+
+			routerApiAuth.GET("/image/:image_id", imageDelivery.GetById)
+			routerApiAuth.POST("/image/:image_id", imageDelivery.UpdateById)
+			routerApiAuth.GET("/images", imageDelivery.Gets)
+		}
+	}
 
 	// swagger
 	router.GET("/swagger/swagger.json", func(c *gin.Context) {
@@ -42,6 +61,10 @@ func main() {
 	})
 	url := ginSwagger.URL("/swagger/swagger.json") // The url pointing to API definition
 	router.GET("/docs/*any", ginSwagger.WrapHandler(swaggerFiles.Handler, url))
-
+	//router.NoRoute(authMiddleware.MiddlewareFunc(), func(c *gin.Context) {
+	//	claims := jwt.ExtractClaims(c)
+	//	log.Printf("NoRoute claims: %#v\n", claims)
+	//	c.JSON(404, gin.H{"code": "PAGE_NOT_FOUND", "message": "Page not found"})
+	//})
 	router.Run(":" + CONFIG.GetString("NO_SSL_PORT"))
 }
